Рефакторинг и оптимизации (#34)
* удалены устаревшие алгоритмы и поля

* оптимизация шаблона генерации

* 1. сократил зависимости
2. форматирование

* sq fixes

* fixes